<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <com.ewide.test.mikkel.customui.CustomToolbar
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:toolbarTitle="@string/toolbar_name_3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:showFavoriteButton="false"
        app:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/customToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/rgSort"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSort"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_asc"/>

        <RadioButton
            android:id="@+id/rbDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/sort_desc"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_list"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/rvCharacter"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCharacter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/rgSort"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>