<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.ewide.test.mikkel.customui.CustomToolbar
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:textColor="@color/black"
        app:toolbarTitle="@string/toolbar_name_1"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_4sdp"
        android:background="@color/purple_50"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:drawableStart="@drawable/is_search"
        android:singleLine="true"
        android:textColor="@color/black"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/search_here"
        android:gravity="center|start"
        app:layout_constraintTop_toBottomOf="@id/customToolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_list"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/rvCharacter"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCharacter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>